Добавила dto для репорта, связала с формой отчета

--- a/src/main/resources/templates/report/balance-form.html
+++ b/src/main/resources/templates/report/balance-form.html
@@ -15,11 +15,12 @@
 <div class="container">
     <span>Форма отчета</span>
     <form action="#" th:action="@{/report/reportDetails}" th:object="${reportDetails}" method="post">
-        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+        <p><input type="submit" class="btn btn-success" value="Сохранить" /> <input type="reset" value="Reset" /></p>
+
         <div class="card-body">
             <!--Срытые инпуты-->
-            <input id="email" name="email" type="hidden" > <!--th:field="*{email}"-->
-            <input id="reportDate" name="reportDate" type="hidden" > <!--th:field="*{reportDate}"-->
+            <input id="email" name="email" type="hidden" th:field="*{email}"> <!---->
+            <input id="reportDate" name="reportDate" type="hidden" th:field="*{reportDate}"> <!---->
 
             <div class="table-responsive">
                 <div class="container">
@@ -29,7 +30,7 @@
                                 <div class="col-xs-12 col-sm-6">
                                     <div class="form-group">
                                         <label for="legalId">Организация</label>
-                                        <select class="form-control form-control-sm" id="legalId" name="legalId" ><!--th:field="*{orgId}"-->
+                                        <select class="form-control form-control-sm" id="legalId" name="legalId" th:field="*{orgId}"><!---->
                                             <option value="" selected="selected"></option>
                                             <option th:each="org : ${organizations}"
                                                     th:value="${org.id}"
@@ -48,16 +49,16 @@
                             </div>
                             <div class="form-group">
                                 <label for="bankName">Наименование банка</label>
-                                <input type="text" class="form-control" id="bankName" name="bankName" ><!--th:field="*{bankName}"-->
+                                <input type="text" class="form-control" id="bankName" name="bankName" th:field="*{bankName}"><!--th:field="*{bankName}"-->
                             </div>
                             <div class="form-group">
                                 <label for="commentText">Комментарий</label>
-                                <textarea class="form-control" id="commentText" name="commentText" ></textarea><!--th:field="*{comment}"-->
+                                <textarea class="form-control" id="commentText" name="commentText" th:field="*{comment}"></textarea><!--th:field="*{comment}"-->
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-6">
                                     <label for="currencyId">Валюта</label>
-                                    <select class="form-control form-control-sm" id="currencyId" name="currencyId" > <!--th:field="*{valCode}"-->
+                                    <select class="form-control form-control-sm" id="currencyId" name="currencyId" th:field="*{valCode}"> <!--th:field="*{valCode}"-->
                                         <option value="" selected="selected"></option>
                                         <option th:each="okv : ${okvCodes}"
                                                 th:value="${okv.id}"
@@ -67,42 +68,42 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6">
                                     <label for="amountCurrency">Cумма в валюте счета</label>
-                                    <input class="form-control" id="amountCurrency" name="amountCurrency" ><!--th:field="*{BalanceSumm}"-->
+                                    <input class="form-control" id="amountCurrency" name="amountCurrency" th:field="*{balanceSumm}"><!--th:field="*{BalanceSumm}"-->
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="contractType">Вид договора</label>
-                                <input type="text" class="form-control" id="contractType" name="contractType"> <!--th:field="*{typeDog}"-->
+                                <input type="text" class="form-control" id="contractType" name="contractType" th:field="*{typeDog}"> <!--th:field="*{typeDog}"-->
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="form-group">
                                         <label for="signContractDate">Дата заключения договора</label>
-                                        <input type="date" class="form-control" id="signContractDate" name="signContractDate" > <!--th:field="*{signDog}"-->
+                                        <input type="date" class="form-control" id="signContractDate" name="signContractDate" th:field="*{signDog}"> <!--th:field="*{signDog}"-->
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="form-group">
                                         <label for="beginContractDate">Дата начала действия договора</label>
-                                        <input type="date" class="form-control" id="beginContractDate" name="beginContractDate" > <!--th:field="*{startDog}"-->
+                                        <input type="date" class="form-control" id="beginContractDate" name="beginContractDate" th:field="*{startDog}"> <!--th:field="*{startDog}"-->
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="form-group">
                                         <label for="endContractDate">Дата окончания договора</label>
-                                        <input type="date" class="form-control" id="endContractDate" name="endContractDate" > <!--th:field="*{endDog}"-->
+                                        <input type="date" class="form-control" id="endContractDate" name="endContractDate" th:field="*{endDog}"> <!--th:field="*{endDog}"-->
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="percent">Расчетная ставка годовых, %</label>
                                 <input type="number"  value="1000" min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100"
-                                       class="form-control currency" id="percent" /> <!--th:field="*{percent}"-->
+                                       class="form-control currency" id="percent" th:field="*{percent}"/> <!--th:field="*{percent}"-->
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-6">
                                     <label for="amountCurrencyId">Валюта</label>
-                                    <select class="form-control form-control-sm"  id="amountCurrencyId" name="amountCurrencyId">
+                                    <select class="form-control form-control-sm"  id="amountCurrencyId" name="amountCurrencyId" th:field="*{valCodeDog}">
                                         <option th:each="okv : ${okvCodes}"
                                                 th:value="${okv.id}"
                                                 th:text="${okv.charcode}"><!--th:field="*{valCodeDog}"-->
@@ -110,8 +111,9 @@
                                     </select>
                                 </div>
                                 <div class="col-xs-12 col-sm-6">
-                                    <label for="amount">Cумма</label>
-                                    <input class="form-control" id="amount" name="amount">
+                                    <label for="operSum">Cумма</label>
+                                    <input type="number"  value="1000" min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100"
+                                           class="form-control currency" id="operSum" th:field="*{operSum}"/>
                                 </div>
                             </div>
                         </div>
