--- a/src/main/resources/templates/report/balance-form.html
+++ b/src/main/resources/templates/report/balance-form.html
@@ -15,7 +15,7 @@
 <div class="container">
     <span>Форма отчета</span>
     <form action="#" th:action="@{/report/reportDetails}" th:object="${reportDetails}" method="post">
-        <p><input type="submit" class="btn btn-success" value="Сохранить" /> <input type="reset" value="Reset" /></p>
+        <p><input type="submit" class="btn btn-success" value="Сохранить" /> <input type="reset" class="btn btn-danger" value="Вернуться" /></p>
 
         <div class="card-body">
             <!--Срытые инпуты-->
