--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,13 +6,12 @@
 <body>
 <div th:fragment="footer">
     <div class="container">
-        <footer class="page-footer font-small blue fixed-bottom">
-            <span sec:authorize="isAuthenticated()">| Logged user: <span sec:authentication="name"></span> |
-                Roles: <span sec:authentication="principal.authorities"></span> |
+        <footer class="page-footer">
+            <div class="footer-copyright text-center py-3">© 2020
+                <span sec:authorize="isAuthenticated()">| Пользователь: <span sec:authentication="name"></span> |
+                Роль: <span sec:authentication="principal.authorities"></span> |
                 <a th:href="@{/logout}">Выйти</a>
             </span>
-            <div class="footer-copyright text-center py-3">© 2020
-                <a href="#">РОСАТОМ Платформа отчетов</a>
             </div>
             <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
             <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
