--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -13,9 +13,10 @@
                 <a th:href="@{/logout}">Выйти</a>
             </span>
             </div>
+            <script type="text/javascript" th:src="@{/js/balance-form-page.js}"></script>
             <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
-            <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+            <script type="text/javascript" th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"></script>
+            <script type="text/javascript" th:src="@{/webjars/popper.js/1.14.3/popper.min.js}"></script>
         </footer>
     </div>
 
