--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,10 +34,19 @@
                     <a class="nav-link" th:href="@{/catalog}">Справочники<span class="sr-only">(current)</span></a>
                 </li>
 
-                <li th:if="${perms.admin}" class="nav-item active">
+                <li sec:authorize="hasRole('ADMIN')" class="nav-item active">
                     <a class="nav-link" th:href="@{/settings}">Настройки<span class="sr-only">(current)</span></a>
                 </li>
 
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Отчеты
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/report/balance}">Остатки на счетах</a>
+                        <div class="dropdown-divider"></div>
+                    </div>
+                </li>
 
                <!-- <li class="nav-item">
                     <a class="nav-link" th:href="@{/table1}">Table1</a>
