--- a/src/main/resources/templates/catalog/FinTrans.html
+++ b/src/main/resources/templates/catalog/FinTrans.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="custom-file">
                     <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-                    <label class="custom-file-label" for="validatedCustomFile">Выбирете файл...</label>
+                    <label class="custom-file-label" for="validatedCustomFile">Выберите файл...</label>
                 </div>
             </div>
             <div class="row">
