--- a/src/main/resources/templates/report/balances.html
+++ b/src/main/resources/templates/report/balances.html
@@ -45,52 +45,24 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td><button type="button" class="btn btn-link">1</button></td>
-                <td>Крокодил Гена</td>
-                <td>Главный по отчетности</td>
-                <td>ООО "Чебурашка"</td>
-                <td>12/09/2020</td>
-                <td>Черновик</td>
+            <tr th:each ="report : ${reports}">
                 <td>
-                    <button type="button" class="btn btn-secondary">Редактировать</button>
-                    <button type="button" class="btn btn-primary">Отправить</button>
+                    <a class="nav-link" th:href="@{'/report/balance/'+${report.id}}">
+                        <button type="button" class="btn btn-link">Открыть</button>
+                    </a>
                 </td>
-
-            </tr>
-            <tr>
-                <td><button type="button" class="btn btn-link">2</button></td>
-                <td>Ослик ИА</td>
-                <td>Младший специалист</td>
-                <td>ЗАО "Вини-Пух"</td>
-                <td>11/09/2020</td>
-                <td>Принят центром</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td><button type="button" class="btn btn-link">3</button></td>
-                <td>Просто Сова</td>
-                <td>Старший специалист</td>
-                <td>ЗАО "Вини-Пух"</td>
-                <td>12/09/2020</td>
+                <td th:utext="${report.user.firstName}">...</td>
+                <td th:utext="${report.user.position}">...</td>
+                <td th:utext="${report.user.organization.shortName}">...</td>
+                <td th:utext="${report.dateReport}">...</td>
                 <td>Черновик</td>
                 <td>
-                    <button type="button" class="btn btn-secondary">Редактировать</button>
+                    <a class="nav-link" th:href="@{'/report/balance/form?reportId='+${report.id}}">
+                        <button type="button" class="btn btn-secondary">Редактировать</button>
+                    </a>
                     <button type="button" class="btn btn-primary">Отправить</button>
                 </td>
             </tr>
-            <tr>
-                <td><button type="button" class="btn btn-link">4</button></td>
-                <td>Папа Карло</td>
-                <td>Ведущий специалист</td>
-                <td>ООО "Буратино"</td>
-                <td>10/09/2020</td>
-                <td>Принят центром</td>
-                <td>
-                    -
-                </td>
-            </tr>
-            </tbody>
         </table>
     </div>
     </div>
