--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,7 +55,8 @@
                                 <option>Выберите цифровую подпись</option>
                             </select>
                             <div>
-                                <span style="width:50%; text-align:right;  display: inline-block;"><input class="enter_with_ecp_btn" type="submit" value="Войти"></span>
+                                <span style="width:50%; text-align:right;  display: inline-block;">
+                                     <button type="submit" class="btn btn-success enter_with_ecp_btn">Войти</button>
                             </div>
                         </form>
                     </div>
